--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -17,6 +17,7 @@
     flex-grow: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     min-height:140px;
+    padding-top:31px;
 }
